# stdbp

./: CMakeLists.txt  README.md
include/stdbp/cpp17/: bit.hpp  common.hpp  memory.hpp  numbers.hpp  stdbp_common.hpp  type_traits.hpp  utility.hpp
test/: CMakeLists.txt  main_cpp17.cpp  test_type_traits.cpp  test_utility.cpp
test/cpp17/: CMakeLists.txt  test_type_traits.cpp  test_utility.cpp
